# cpp-import-std

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp-import-std.code-workspace
cmake/: clang.cmake  copy-std-module.cmake  cxx_module.cmake  generate_clangd.cmake  module_std.cmake  std.cmake
compiler/: CMakeLists.txt
compiler/src/: compiler.cpp  compiler.h  compiler.ixx  compiler_impl.hpp  compiler_legacy.cpp
legacy/cmake/: cxx_module.cmake
presets/: configure.json
src/: compiler.cpp  compiler.ixx  main.cpp  main.ixx
toolchainFile/: clang.cmake  gcc.cmake
